--- a/views/books/approve_user.ejs
+++ b/views/books/approve_user.ejs
@@ -128,7 +128,7 @@
                                         <h4 class="show tip-left"><span class=""><%= user.pivot.created_at %></span></h4>
                                         <div class="well">
                                             <div class="media">
-                                                <div class="smedia-left">
+                                                <div class="media-left">
                                                     <img src="<%= user.avatar ? user.avatar : '/images/user/icon_user_default.png'%>" class="media-object  w-70-h-70" alt="library">
                                                 </div>
                                                 <div class="media-body">
