--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,4 +1,4 @@
-<section class="relative fix m-bottom50" id="sc3">
+<section class="relative fix m-bottom50 gray-bg" id="sc3">
     <div class="hide-categoryIds" data-category-ids=<%= categoryIds %>></div>
     <div class="container">
         <div class="row">
