--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -1,4 +1,4 @@
-<section class="relative fix">
+<section class="relative fix gray-bg">
     <div class="container">
         <div class="space-30"></div>
         <div class="row">
