Fix get book sharing of user and add keeper book

--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -102,7 +102,7 @@
                                     <div class="media-body">
                                         <a href="#user_review">
                                             <span class="badge"><%= data.item.reviews_detail.length %></span> Review
-                                        <span class="badge"></a>
+                                            <span class="badge"></span></a>
                                     </div>
                                 </div>
                             </div>
