--- a/views/books/add.ejs
+++ b/views/books/add.ejs
@@ -19,7 +19,7 @@
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <div id="modelSpace"></div>
                 <div class='suggestedTitle'></div>
-                <button class="btn btn-primary btn-xs" id="fillSuggestData"> Import data book </button>
+                <button class="btn btn-primary btn-xs" id="fillSuggestData"> Import data book from google book </button>
                 <div class="space-10"></div>
                 <form action="/books/add" id="form-add-book" method="post" enctype="multipart/form-data">
                     <div class="row">
