--- a/views/books/approve_user.ejs
+++ b/views/books/approve_user.ejs
@@ -166,9 +166,6 @@
                                                        <a href="/users/<%= user.id %>"><h4 class="media-heading"><%= user.name %> [<%= user.email %>]</h4></a>
                                                        <span class="label label-success lbl-returned<%= user.id %>">returned</span>
                                                    </div>
-                                                   <div class="media-body">
-                                                       <a href="javascript:void(0)" onclick="return unapproveRequestReturning(<%= user.id %>);" class="btn btn-primary btn-xs btn-unapprove-returned<%= user.id %>">Unapprove</a>
-                                                   </div>
                                                </div>
                                            </div>
                                        <% }) %>
@@ -208,7 +205,9 @@
 <%- contentFor('appjs') %>
 <script src="/javascripts/books/book.js" type="text/javascript"></script>
 <script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
+<script src="/bower/sweetalert/dist/sweetalert.min.js"></script>
 
 <%- contentFor('appCss') %>
 <link href="/bower/bootstrap-star-rating/css/star-rating.css" rel="stylesheet" type="text/css">
 <link href="/bower/bootstrap-star-rating/css/theme-krajee-fa.css" rel="stylesheet" type="text/css">
+<link href="/bower/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css">
