--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -554,7 +554,9 @@
     Book.init()
 </script>
 <script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
+<script src="/bower/sweetalert/dist/sweetalert.min.js"></script>
 
 <%- contentFor('appCss') %>
 <link href="/bower/bootstrap-star-rating/css/star-rating.css" rel="stylesheet" type="text/css">
 <link href="/bower/bootstrap-star-rating/css/theme-krajee-fa.css" rel="stylesheet" type="text/css">
+<link href="/bower/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css">
