--- a/views/books/add.ejs
+++ b/views/books/add.ejs
@@ -26,7 +26,10 @@
                         <div class="col-xs-12 col-sm-12">
                             <div class="form-group">
                                 <label for="title">Title</label>
-                                <input type="text" name="title" id="title" class="form-control bg-danger" placeholder="Enter your book title..." required="required">
+                                <input type="text" name="title" class="title-book" id="title" class="form-control bg-danger" required="required">
+                            </div>
+                            <div class="search-result col-md-12">
+                                <ul id="data-suggest-book"></ul>
                             </div>
                         </div>
                     </div>
