--- a/views/layout/template.ejs
+++ b/views/layout/template.ejs
@@ -74,6 +74,7 @@
 <!-- Active-JS -->
 <script src="/javascripts/main.js"></script>
 <script src="/javascripts/books/search.js" type="text/javascript"></script>
+<script src="/javascripts/books/upload_image.js" type="text/javascript"></script>
 <script src="/bower/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="/bower/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
 <script src="/bower/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
