Show reviewed books in profile page

--- a/views/shared/myBooks.ejs
+++ b/views/shared/myBooks.ejs
@@ -35,7 +35,7 @@
                 </div>
                 <% if (book.users_reading && book.users_reading.length) { %>
                     <div class="owners">
-                        <strong> Keeded by: </strong>
+                        <strong> Keeped by: </strong>
                         <% book.users_reading.forEach(function (user, index) { %>
                             <% if (index == 6) {
                                     %> <strong> ... </strong> <%
